[gd_scene load_steps=14 format=2]

[ext_resource path="res://Objects/Command.gd" type="Script" id=1]
[ext_resource path="res://resources/SE/ConsoleInput.wav" type="AudioStream" id=2]
[ext_resource path="res://Objects/Clickable.tscn" type="PackedScene" id=3]
[ext_resource path="res://resources/sprites/Command/buttons.png" type="Texture" id=4]
[ext_resource path="res://Objects/Tableau.gd" type="Script" id=5]
[ext_resource path="res://resources/sprites/Command/Panel.png" type="Texture" id=6]
[ext_resource path="res://resources/SE/PushyButtons.wav" type="AudioStream" id=7]

[sub_resource type="RectangleShape2D" id=1]
extents = Vector2( 16.0502, 10.5699 )

[sub_resource type="CapsuleShape2D" id=2]
radius = 12.2634
height = 20.3771

[sub_resource type="CapsuleShape2D" id=3]
radius = 13.6889
height = 21.611

[sub_resource type="CapsuleShape2D" id=4]
radius = 12.5196

[sub_resource type="CapsuleShape2D" id=5]
radius = 14.3191

[sub_resource type="CircleShape2D" id=6]
radius = 25.1827

[node name="Command" type="Node2D"]
position = Vector2( 178.71, 390.824 )
script = ExtResource( 1 )

[node name="BipBoup" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 2 )
volume_db = -16.0

[node name="ClickableRoot" parent="." instance=ExtResource( 3 )]
editor/display_folded = true

[node name="CollisionShape2D" parent="ClickableRoot/ClickableArea" index="1"]
position = Vector2( 6.61584, 3.67547 )
shape = SubResource( 1 )

[node name="Command" type="Sprite" parent="."]
position = Vector2( 7.15991, 1.43198 )
texture = ExtResource( 4 )

[node name="Tableau" type="Node2D" parent="."]
position = Vector2( 3.34039, 1.6702 )
script = ExtResource( 5 )

[node name="Sprite" type="Sprite" parent="Tableau"]
position = Vector2( 216.231, -157.79 )
texture = ExtResource( 6 )

[node name="Click" type="AudioStreamPlayer" parent="Tableau"]
stream = ExtResource( 7 )
volume_db = -12.0

[node name="LeftArrow" parent="Tableau" instance=ExtResource( 3 )]
editor/display_folded = true

[node name="ClickableArea" parent="Tableau/LeftArrow" index="0"]
distance_check = false

[node name="CollisionShape2D" parent="Tableau/LeftArrow/ClickableArea" index="1"]
position = Vector2( 113.664, -157.382 )
rotation = 1.5708
shape = SubResource( 2 )

[node name="UpArrow" parent="Tableau" instance=ExtResource( 3 )]
editor/display_folded = true

[node name="ClickableArea" parent="Tableau/UpArrow" index="0"]
distance_check = false

[node name="CollisionShape2D" parent="Tableau/UpArrow/ClickableArea" index="1"]
position = Vector2( 153.151, -194.117 )
shape = SubResource( 3 )

[node name="RightArrow" parent="Tableau" instance=ExtResource( 3 )]
editor/display_folded = true

[node name="ClickableArea" parent="Tableau/RightArrow" index="0"]
distance_check = false

[node name="CollisionShape2D" parent="Tableau/RightArrow/ClickableArea" index="1"]
position = Vector2( 190.336, -154.411 )
rotation = -1.5708
shape = SubResource( 4 )

[node name="DownArrow" parent="Tableau" instance=ExtResource( 3 )]
editor/display_folded = true

[node name="ClickableArea" parent="Tableau/DownArrow" index="0"]
distance_check = false

[node name="CollisionShape2D" parent="Tableau/DownArrow/ClickableArea" index="1"]
position = Vector2( 151.26, -118.487 )
shape = SubResource( 5 )

[node name="OK" parent="Tableau" instance=ExtResource( 3 )]
editor/display_folded = true

[node name="ClickableArea" parent="Tableau/OK" index="0"]
distance_check = false

[node name="CollisionShape2D" parent="Tableau/OK/ClickableArea" index="1"]
position = Vector2( 289.285, -157.563 )
shape = SubResource( 6 )
[connection signal="clicked" from="ClickableRoot/ClickableArea" to="." method="_on_ClickableCommandArea_clicked"]
[connection signal="clicked" from="Tableau/LeftArrow/ClickableArea" to="Tableau" method="_on_ClickableLeftArea_clicked"]
[connection signal="clicked" from="Tableau/UpArrow/ClickableArea" to="Tableau" method="_on_ClickableUpArea_clicked"]
[connection signal="clicked" from="Tableau/RightArrow/ClickableArea" to="Tableau" method="_on_ClickableRightArea_clicked"]
[connection signal="clicked" from="Tableau/DownArrow/ClickableArea" to="Tableau" method="_on_ClickableDownArea_clicked"]
[connection signal="clicked" from="Tableau/OK/ClickableArea" to="Tableau" method="_on_ClickableOKArea_clicked"]

[editable path="ClickableRoot"]

[editable path="Tableau/LeftArrow"]

[editable path="Tableau/UpArrow"]

[editable path="Tableau/RightArrow"]

[editable path="Tableau/DownArrow"]

[editable path="Tableau/OK"]
