extends Node2D

func _on_ClickableLeftArea_clicked():
	MainTitleMusic.changeFxVolume($Click)

func _on_ClickableUpArea_clicked():
	MainTitleMusic.changeFxVolume($Click)

func _on_ClickableRightArea_clicked():
	MainTitleMusic.changeFxVolume($Click)

func _on_ClickableDownArea_clicked():
	MainTitleMusic.changeFxVolume($Click)

func _on_ClickableOKArea_clicked():
	MainTitleMusic.changeFxVolume($Click)
